# Sai

./: AGENTS.md  OPENCLAW.md
.ai/: CONTEXT.md  INITIALIZE.md  ONBOARDING.md
.ai/_config/: dispatch-matrix.json  reporting.yaml
.ai/agents/: README.md  registry.json
.ai/agents/mimi/runtimes/claude/agent-sdk/: README.md  pyproject.toml
.ai/agents/mimi/runtimes/claude/agent-sdk/config/: agent-options.json
.ai/agents/mimi/runtimes/claude/agent-sdk/dispatch/slack-github-bridge/: README.md
.ai/agents/mimi/runtimes/claude/agent-sdk/src/: run_agent.py
.ai/runs/: README.md
.claude/: settings.json
.claude/agents/: mimi-dispatcher.md
.cursor/rules/: sai-coordination.mdc
.githooks/: post-checkout  pre-push
.github/workflows/: agent-audit.yml  mimi-dispatch-stub.yml
openclaw-dashboard/: .gitignore  CONTEXT.md  ICM-HANDBOOK.md  README.md
openclaw-dashboard/design/: DESIGN-LANGUAGE.md  components.md  tokens.json
openclaw-dashboard/docs/: LAYERED-LOAD-ORDER.md  agent-telegram-registry.md  alfred-smoke-runbook.md  auth-matrix.md  blocked-agents.md  fleet-coherence-gate.md  (+7 more)
scripts/: agent-automation-spec  agent-contract-pr-review  agent-contract-scaffold  agent-init  agent-report  agent-scaffold  agent-verify-caps  ci-merge-handoff-slack  install-agent-hooks  verify-agent-setup  verify-contract-shell-allowlist  verify-contractor-shell-allowlist  verify-dispatcher-matrix  verify-merge-handoff  verify-provisional-claude-permissions  verify-provisional-contractor-perms  verify-scaffold-safety  verify-semantic-hierarchy
splunk-clone/: CLAUDE.md  README.md
(+566 files in other folders)
